# TUW-interdisciplinary-project

./: .gitignore  README.md  pyproject.toml  scripts.md
src/: compare.py  conversion.py  find_center.py  prepare_nnunet_inputs.py  prepare_nnunet_predict.py  prepare_nnunet_training.py  resample.py  shift.py  smoothing.py  view_nii.py
src/nnUNet/: prepare_inputs.py  preprocess_inference.py  preprocessing_utils.py
src/refining/: smoothing.py
src/utils/: image_processing.py  preprocessing_utils.py
