[project]
name = "interdisciplinaryproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fury>=0.12.0",
    "matplotlib>=3.10.6",
    "nibabel>=5.3.2",
    "nilearn>=0.12.1",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "simpleitk>=2.5.2",
    "totalsegmentator>=2.11.0",
    "trimesh>=4.8.3",
    "torch==2.9.0+rocm6.4",
    "torchvision==0.24.0+rocm6.4",
    "pytorch-triton-rocm",
    "nnunetv2>=2.6.2",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
pytorch-triton-rocm = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit= true
