[project]
name = "interdisciplinaryproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nibabel>=5.3.2",
    "trimesh>=4.8.3",
    "simpleitk>=2.5.2",
    "torch==2.8",
    "torchvision==0.23",
    "nnunetv2>=2.6.2",
    "totalsegmentator>=2.11.0",
]
